# personal_voice_msg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/task-logs/: T00.md  T01.md  T02.md  T03.md  T04.md  T05.md  T06.md
scripts/: repository_policy.py
src/personal_voice_msg/: __init__.py  config.py  database.py  history.py  normalization.py  redaction.py  scheduling.py
src/personal_voice_msg/discovery/: __init__.py  web.py
tests/fast/: test_configuration.py  test_daily_runs.py  test_database_migrations.py  test_deduplication_corpus.py  test_delivery_state_machine.py  test_discovery_web.py  test_message_history.py  test_message_history_concurrency.py  test_normalization.py  test_redaction.py  test_repository_policy.py  test_scheduling.py
tests/live/: test_web_fetcher_live.py
tests/security/: test_web_fetcher_boundaries.py  test_web_fetcher_network.py
tests/security/t06/: Dockerfile  compose.yml  fixture_server.py
